# lexical-corrector

./: .gitignore  CMakeLists.txt  Changelog  README.md
bindings/: CMakeLists.txt  LexicalCorrector.cc  LexicalCorrector.h  LexicalCorrector.i  testpython.py  testpython_basic.py
example/: CMakeLists.txt  correct-diacrics.txt  correct-diacritics.txt  letters.txt  main.cc  result_reference.json  result_reference.short.txt  result_reference.txt  russ.txt  word.txt  word2.txt
java/: pom.xml
java/src/main/java/com/orange/labs/lexicon/: ArbreBinaire.java  Calculator.java  Corrector.java  Lexicon.java  Noeud.java  SimilarLetters.java  WordForm.java
lib/: Arbre.cc  Arbre.h  CMakeLists.txt  Calculator.cc  Calculator.h  Corrector.cc  Corrector.h  LexicalEntry.cc  LexicalEntry.h  Noeud.cc  Noeud.h  SimilarLetters.cc  SimilarLetters.h  Table.cc  Table.h  Util.cc  Util.h
